# test_prog

./: .gitignore  README.md
cplusplus/gtktest02_auth/: CMakeLists.txt
cplusplus/gtktest02_auth/src/ui/login/: login.glade
cplusplus/gtktest02_auth/src/ui/main/: main.glade
cplusplus/test01_gtk3_helloworld/: CMakeLists.txt
cplusplus/test01_gtk3_helloworld/src/: main.cpp
docs/: git_init.md
golang/gotest01/: .env  README.md  go.mod
golang/gotest02_GTK3_HelloWorld/: README.md  main.go
golang/gotest02_GTK3_HelloWorld/ui/login/: login.glade
golang/test01/: README.md  docker-compose.yml  main.go
golang/test02_gtk3_helloworld/: README.md  go.mod
golang/test03_gtk3_auth/: go.mod  go.sum  main.go
golang/test03_gtk3_auth/ui/auth/: auth.go
